[package]
name = "learn-opengl"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[dependencies]
glfw = "0.35"
gl = "0.14"
gl_loader = "0.1"
nalgebra = { version = "0.19", features = ["mint"] }
nalgebra-glm = "0.5"
# glsl = "4.0"

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"]

[dependencies.strugl]
git = "https://github.com/aquarhead/strugl"
